--- a/style.css
+++ b/style.css
@@ -32,3 +32,22 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.image-container {
+  margin: 10px 20%;
+}
+
+.image-container img {
+  width: 100%;
+  margin-top: 5px;
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 1rem;
+  }
+
+  .image-container {
+    margin-top: 2.5px;
+  }
+}
